diesel_compile_tests/tests/fail/derive/belongs_to_incorrect_lifetime_syntax.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/belongs_to_incorrect_lifetime_syntax.rs:25:25
   |
24 | #[derive(Associations)]
   |          - help: consider introducing lifetime `'a` here: `'a,`
25 | #[diesel(belongs_to(Foo<'a>))]
   |                         ^^ undeclared lifetime
